--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
   },
   "require-dev": {},
   "autoload": {
-    "classmap": ["src"]
+    "psr-4": {
+      "ZhukMax\\StringPad\\": "src/"
+    }
   }
 }
